fixed z-index

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
 
   @include bgImg(
-    "../assets/home/cherryTree-grouped.jpg",
+    "../assets/home/cherryTree-grouped.png",
     fixed,
     contain,
     $bgDawn,
@@ -29,7 +29,7 @@
 
   &__img {
     position: absolute;
-    z-index: -200;
+    z-index: -100;
 
     &-padals {
       width: 300px;
